<resources>
    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="result_is">result is</string>
    <string name="sum">+</string>
    <string name="subtract">-</string>
    <string name="mult">*</string>
    <string name="division">/</string>
</resources>
