<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calcu"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/cal_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/cal_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cal_display_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="20dp"
        android:text="@string/result_is"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/cal_plus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/cal_minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="60sp"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/cal_mult_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mult"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/cal_div_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>